cmake_minimum_required(VERSION 3.16)
project(test CXX)
set(CMAKE_CXX_FLAGS "-Wall -fopenmp")
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_executable(main main.cpp)
add_executable(test test.cpp)
add_executable(prime_factorer prime_factorer.cpp)
add_executable(prime_factorer2 prime_factorer2.cpp)
add_executable(prime_factorer3 prime_factorer3.cpp)
add_executable(prime_factorer4 prime_factorer4.c)
add_executable(prime_factorer5 prime_factorer5.c)